PlayerUI's connect+fixed spacing+drop.menu+timeUPD

--- a/src/app.css
+++ b/src/app.css
@@ -29,7 +29,7 @@
     @apply bg-red-800 rounded-md h-full
 }
 .seek-slider{
-    @apply absolute top-[-1px] left-[-10px] ml-0 rounded-md h-full w-[103%] bg-transparent appearance-none
+    @apply absolute top-[-1px] left-[-8px] ml-0 rounded-md h-full w-[103%] bg-transparent appearance-none
 }
 .seek-slider::-webkit-slider-thumb {
     @apply w-5 h-5 bg-red-600 border-red-50 border-2 rounded-[50%] cursor-pointer appearance-none
